Fix z-index in Internet Explorer 11

--- a/css/toast.css
+++ b/css/toast.css
@@ -11,6 +11,7 @@
 
 .toast-wrapper {
     position: absolute;
+    z-index: 2;
     top: 0;
     right: 0;
     margin: 5px
